# coreutils

./: Cargo.toml  Makefile
src/csplit/: Cargo.toml  csplit.rs  main.rs
src/csplit/busytest/: README
